@@ -161,9 +161,7 @@ window name is not supposed to be changed in ICCCM.
 
 @item Added @code{keymap-trans} window-matcher [Scott Scriven]
 
-@item Added @code{view-clipboard} function [Mark Triggs]
-
-@item Added @code{display-message-with-timeout} @code{browser} commands [Christopher Bratusek]
+@item Added @code{browser} command [Christopher Bratusek]
 
 @item Added @code{move-window-center} command [Christopher Bratusek]
 
@@ -172,8 +170,6 @@ window name is not supposed to be changed in ICCCM.
 @item Added viewport-boundary-mode @code{dynamic} (creates a new viewport then hitting the screen-edge) [Jeremy Hankins]
 
 @item Improve position matcher to bind a window to a position (either @code{center} @code{east} @code{north} @code{north-east} @code{north-west} @code{south} @code{south-east} @code{south-west} @code{west}) OR to a user-given position [Jeremy Hankins]
-
-@item When entering a different Workspace, it's now possible to display the name of it (like in Enlightenment) [Christopher Bratusek]
 
 @item GNOME integration updates
 
