@@ -1,3 +1,10 @@
+2009-11-14  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/user.jl
+	* lisp/sawfish/wm/workspace.jl: removed display-message-with-timeout
+	                                        view-clipboard
+						display-ws-name
+						with all setters and defvars/defcustoms
+
 2009-11-14  Teika kazura <teika@lavabit.com>
 	* sawfish-client.jl: won't say "bye" at exit. The greeting "bye" annoys if you use emacs' sawfish-mode, so drop it.
 
